--- a/Primera pre-entrega/proyectoAngular/src/app/layouts/dashboard/dashboard.component.scss
+++ b/Primera pre-entrega/proyectoAngular/src/app/layouts/dashboard/dashboard.component.scss
@@ -237,19 +237,33 @@ ul li {
 
 ////////////////////////////////////////////////
 
-.example-container {
-  width: 100%;
-  height: 100vh;
-  border: 1px solid rgba(0, 0, 0, 0.5);
-}
+// .example-container {
+//   display: flex;
+//   width: 100%;
+//   height: 100vh;
+//   border: 1px solid rgba(0, 0, 0, 0.5);
+// }
 
-.example-sidenav-content {
+// .example-sidenav-content {
+//   display: flex;
+//   height: 100%;
+//   align-items: center;
+//   justify-content: center;
+// }
+
+// .example-sidenav {
+//   padding: 20px;
+//   align-items: center;
+//   justify-content: center;
+// }
+
+.menu-container {
   display: flex;
-  height: 100%;
-  align-items: center;
-  justify-content: center;
+  position: relative;
+  background-color: #fff;
+  height: 100vh;
 }
 
-.example-sidenav {
-  padding: 20px;
+.show-menu {
+  display: block;
 }
