--- a/Primera pre-entrega/proyectoAngular/src/app/layouts/dashboard/dashboard.component.scss
+++ b/Primera pre-entrega/proyectoAngular/src/app/layouts/dashboard/dashboard.component.scss
@@ -237,33 +237,22 @@ ul li {
 
 ////////////////////////////////////////////////
 
-// .example-container {
-//   display: flex;
-//   width: 100%;
-//   height: 100vh;
-//   border: 1px solid rgba(0, 0, 0, 0.5);
-// }
-
-// .example-sidenav-content {
-//   display: flex;
-//   height: 100%;
-//   align-items: center;
-//   justify-content: center;
-// }
-
-// .example-sidenav {
-//   padding: 20px;
-//   align-items: center;
-//   justify-content: center;
-// }
-
-.menu-container {
+.example-container {
   display: flex;
-  position: relative;
-  background-color: #fff;
+  width: 100%;
   height: 100vh;
+  border: 1px solid rgba(0, 0, 0, 0.5);
 }
 
-.show-menu {
-  display: block;
+.example-sidenav-content {
+  display: flex;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+.example-sidenav {
+  padding: 20px;
+  align-items: center;
+  justify-content: center;
 }
