--- a/Primera pre-entrega/proyectoAngular/src/app/layouts/dashboard/pages/users/components/user-dialog/user-dialog.component.html
+++ b/Primera pre-entrega/proyectoAngular/src/app/layouts/dashboard/pages/users/components/user-dialog/user-dialog.component.html
@@ -16,16 +16,25 @@
                     <mat-hint>Campo obligatorio</mat-hint>
                 </mat-form-field>
             </div>
-            <div class="col-12">
+            <div class="col-8">
                 <mat-form-field class="w-100 p-2" appearance="fill">
                     <mat-label>Email</mat-label>
                     <input formControlName="email" matInput />
                     <mat-hint>Campo obligatorio</mat-hint>
                 </mat-form-field>
             </div>
+            <div class="col-4">
+                <mat-form-field class="w-100 p-2" appearance="fill">
+                    <mat-label>Rol</mat-label>
+                    <mat-select formControlName="role">
+                        <mat-option value="alumno">Alumno</mat-option>
+                        <mat-option value="profesor">Profesor</mat-option>
+                        <mat-option value="admin">Administrador</mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
         </div>
     </form>
-    {{userForm.value | json}}
 </div>
 <div class="d-flex justify-content-end" mat-dialog-actions>
     <button mat-dialog-close mat-button>Cancelar</button>
