--- a/Primera pre-entrega/proyectoAngular/src/app/layouts/dashboard/pages/users/users.component.html
+++ b/Primera pre-entrega/proyectoAngular/src/app/layouts/dashboard/pages/users/users.component.html
@@ -1,4 +1,4 @@
-<h2>Alumnos </h2>
+<h2>Usuarios</h2>
 
 <div class="d-flex justify-content-end">
     <button (click)="openDialog()" mat-button color="accent">
@@ -31,10 +31,29 @@
         <td mat-cell *matCellDef="let element"> {{element.email}} </td>
     </ng-container>
 
+    <!-- Role Column -->
+    <ng-container matColumnDef="role">
+        <th mat-header-cell *matHeaderCellDef> Rol </th>
+        <td mat-cell *matCellDef="let element"> {{element.role}} </td>
+    </ng-container>
+
     <!-- Created Column -->
     <ng-container matColumnDef="createdDate">
         <th mat-header-cell *matHeaderCellDef> Ingreso </th>
         <td mat-cell *matCellDef="let element"> {{element.createdDate | date}} </td>
+    </ng-container>
+
+    <!-- Actions Column -->
+    <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef>...</th>
+        <td mat-cell *matCellDef="let element">
+            <button (click)="openDialog(element)" mat-mini-fab color="primary">
+                <mat-icon>edit</mat-icon>
+            </button>
+            <button (click)="onDeleteUser(element.id)" mat-mini-fab color="warn">
+                <mat-icon>delete</mat-icon>
+            </button>
+        </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
