pipe nombre completo

--- a/Primera pre-entrega/proyectoAngular/src/app/layouts/dashboard/dashboard.component.html
+++ b/Primera pre-entrega/proyectoAngular/src/app/layouts/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
         <span>Danzas Clásicas</span>
         }
         <button (click)="showFiller = !showFiller" mat-raised-button>
-            Toggle extra text
+            Mas info...
         </button>
     </mat-drawer>
 
