--- a/Primera pre-entrega/proyectoAngular/src/app/layouts/dashboard/pages/users/users.component.html
+++ b/Primera pre-entrega/proyectoAngular/src/app/layouts/dashboard/pages/users/users.component.html
@@ -37,6 +37,12 @@
         <td mat-cell *matCellDef="let element"> {{element.role}} </td>
     </ng-container>
 
+    <!-- UserName Column -->
+    <ng-container matColumnDef="userName">
+        <th mat-header-cell *matHeaderCellDef>Nombre de Usuario</th>
+        <td mat-cell *matCellDef="let element"> {{ element | fullName }} </td>
+    </ng-container>
+
     <!-- Created Column -->
     <ng-container matColumnDef="createdDate">
         <th mat-header-cell *matHeaderCellDef> Ingreso </th>
