--- a/Primera pre-entrega/proyectoAngular/src/app/layouts/dashboard/pages/users/users.component.html
+++ b/Primera pre-entrega/proyectoAngular/src/app/layouts/dashboard/pages/users/users.component.html
@@ -9,49 +9,49 @@
 <table mat-table [dataSource]="users" class="mat-elevation-z8">
     <!-- Id Column -->
     <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef> No. </th>
+        <th mat-header-cell *matHeaderCellDef appLettersizes> No. </th>
         <td mat-cell *matCellDef="let element"> {{element.id}} </td>
     </ng-container>
 
     <!-- Name Column -->
     <ng-container matColumnDef="firstName">
-        <th mat-header-cell *matHeaderCellDef> Nombre </th>
+        <th mat-header-cell *matHeaderCellDef appLettersizes> Nombre </th>
         <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
     </ng-container>
 
     <!-- Lastname Column -->
     <ng-container matColumnDef="lastName">
-        <th mat-header-cell *matHeaderCellDef> Apellido </th>
+        <th mat-header-cell *matHeaderCellDef appLettersizes> Apellido </th>
         <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
     </ng-container>
 
     <!-- Email Column -->
     <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef> Email </th>
+        <th mat-header-cell *matHeaderCellDef appLettersizes> Email </th>
         <td mat-cell *matCellDef="let element"> {{element.email}} </td>
     </ng-container>
 
     <!-- Role Column -->
     <ng-container matColumnDef="role">
-        <th mat-header-cell *matHeaderCellDef> Rol </th>
+        <th mat-header-cell *matHeaderCellDef appLettersizes> Rol </th>
         <td mat-cell *matCellDef="let element"> {{element.role}} </td>
     </ng-container>
 
     <!-- UserName Column -->
     <ng-container matColumnDef="userName">
-        <th mat-header-cell *matHeaderCellDef>Nombre de Usuario</th>
+        <th mat-header-cell *matHeaderCellDef appLettersizes>Nombre de Usuario</th>
         <td mat-cell *matCellDef="let element"> {{ element | fullName }} </td>
     </ng-container>
 
     <!-- Created Column -->
     <ng-container matColumnDef="createdDate">
-        <th mat-header-cell *matHeaderCellDef> Ingreso </th>
+        <th mat-header-cell *matHeaderCellDef appLettersizes> Ingreso </th>
         <td mat-cell *matCellDef="let element"> {{element.createdDate | date}} </td>
     </ng-container>
 
     <!-- Actions Column -->
     <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef>...</th>
+        <th mat-header-cell *matHeaderCellDef appLettersizes>...</th>
         <td mat-cell *matCellDef="let element">
             <button (click)="openDialog(element)" mat-mini-fab color="primary">
                 <mat-icon>edit</mat-icon>
