--- a/Segunda pre-entrega/proyectoAngular/src/app/layouts/dashboard/dashboard.component.html
+++ b/Segunda pre-entrega/proyectoAngular/src/app/layouts/dashboard/dashboard.component.html
@@ -3,10 +3,10 @@
         <mat-nav-list>
             <a #homeLink="routerLinkActive" routerLinkActive [activated]="homeLink.isActive" routerLink="home"
                 mat-list-item>Inicio</a>
-            <a #alumnosLink="routerLinkActive" routerLinkActive [activated]="alumnosLink.isActive" routerLink="alumnos"
-                mat-list-item>Alumnos</a>
             <a #clasesLink="routerLinkActive" routerLinkActive [activated]="clasesLink.isActive" routerLink="clases"
                 mat-list-item>Clases</a>
+            <a #alumnosLink="routerLinkActive" routerLinkActive [activated]="alumnosLink.isActive" routerLink="alumnos"
+                mat-list-item>Alumnos</a>
             <a (click)="logout()" mat-list-item>Cerrar sesion</a>
         </mat-nav-list>
     </mat-drawer>
@@ -29,21 +29,17 @@
             </div>
 
         </mat-toolbar>
-
-        <div style="padding: 1rem;">
-            <div class="d-flex justify-content-end">
-                <button (click)="login()" mat-button color="primary">
-                    Iniciar sesion
-                </button>
-            </div>
-            <!-- <div class="d-flex justify-content-end">
-                <button (click)="logout()" mat-button color="warn">
-                    Cerrar sesion
-                </button>
-            </div> -->
-            <app-users></app-users>
+        <div>
+            <main>
+                <div style="padding: 1rem;">
+                    <div class="d-flex justify-content-end">
+                        <button (click)="login()" mat-button color="primary">
+                            Iniciar sesion
+                        </button>
+                    </div>
+                </div>
+                <router-outlet />
+            </main>
         </div>
-
     </div>
-
 </mat-drawer-container>
