--- a/Segunda pre-entrega/proyectoAngular/src/app/layouts/dashboard/pages/users/users.component.html
+++ b/Segunda pre-entrega/proyectoAngular/src/app/layouts/dashboard/pages/users/users.component.html
@@ -53,6 +53,9 @@
     <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef appLettersizes>...</th>
         <td mat-cell *matCellDef="let element">
+            <button [routerLink]="element.id" mat-mini-fab color="accent">
+                <mat-icon>visibility</mat-icon>
+            </button>
             <button (click)="openDialog(element)" mat-mini-fab color="primary">
                 <mat-icon>edit</mat-icon>
             </button>
