Se crea card para detalles de usuario

--- a/Segunda pre-entrega/proyectoAngular/src/app/layouts/auth/auth.component.html
+++ b/Segunda pre-entrega/proyectoAngular/src/app/layouts/auth/auth.component.html
@@ -1,1 +1,3 @@
-<p>auth works!</p>
+<main style="height: 100vh">
+    <button (click)="login()" color="primary" mat-flat-button>Iniciar sesion</button>
+</main>
