Se crea servicio para componente de clases

--- a/Segunda pre-entrega/proyectoAngular/src/app/layouts/dashboard/pages/home/home.component.html
+++ b/Segunda pre-entrega/proyectoAngular/src/app/layouts/dashboard/pages/home/home.component.html
@@ -1,1 +1,4 @@
-<p>home works!</p>
+<div class="container mt-4">
+    <h1>Bienvenido a Dance Academy</h1>
+    <p>¡Descubre el mundo de la danza con nosotros!</p>
+</div>
