--- a/Segunda pre-entrega/proyectoAngular/src/app/layouts/dashboard/pages/clases/clases.component.html
+++ b/Segunda pre-entrega/proyectoAngular/src/app/layouts/dashboard/pages/clases/clases.component.html
@@ -1,1 +1,35 @@
-<p>clases works!</p>
+<h2>Nuestras Clases de Danza</h2>
+
+<mat-progress-bar *ngIf="loading" mode="indeterminate" color="accent"></mat-progress-bar>
+
+<ng-container *ngIf="!loading">
+    <table mat-table [dataSource]="clases" class="mat-elevation-z8">
+        <!-- Name Column -->
+        <ng-container matColumnDef="nombre">
+            <th mat-header-cell *matHeaderCellDef appLettersizes> Clase </th>
+            <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+        </ng-container>
+
+        <!-- description Column -->
+        <ng-container matColumnDef="descripcion">
+            <th mat-header-cell *matHeaderCellDef appLettersizes> Descripción </th>
+            <td mat-cell *matCellDef="let element"> {{element.descripcion}} </td>
+        </ng-container>
+
+        <!-- Actions Column -->
+        <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef appLettersizes>...</th>
+            <td mat-cell *matCellDef="let element">
+                <button [routerLink]="element.id" mat-mini-fab color="accent">
+                    <mat-icon>visibility</mat-icon>
+                </button>
+                <!-- <button (click)="openDialog(element)" mat-mini-fab color="primary">
+                    <mat-icon>edit</mat-icon>
+                </button> -->
+            </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+</ng-container>
