--- a/Segunda pre-entrega/proyectoAngular/src/app/layouts/dashboard/pages/clases/clases.component.html
+++ b/Segunda pre-entrega/proyectoAngular/src/app/layouts/dashboard/pages/clases/clases.component.html
@@ -6,26 +6,27 @@
     <table mat-table [dataSource]="clases" class="mat-elevation-z8">
         <!-- Name Column -->
         <ng-container matColumnDef="nombre">
-            <th mat-header-cell *matHeaderCellDef appLettersizes> Clase </th>
-            <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+            <th mat-header-cell *matHeaderCellDef> Clase </th>
+            <td mat-cell *matCellDef="let element"> {{ element.nombre }} </td>
         </ng-container>
 
-        <!-- description Column -->
+        <!-- Description Column -->
         <ng-container matColumnDef="descripcion">
-            <th mat-header-cell *matHeaderCellDef appLettersizes> Descripción </th>
-            <td mat-cell *matCellDef="let element"> {{element.descripcion}} </td>
+            <th mat-header-cell *matHeaderCellDef> Descripción </th>
+            <td mat-cell *matCellDef="let element" style="text-align: start;"> {{ element.descripcion }} </td>
         </ng-container>
 
         <!-- Actions Column -->
         <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef appLettersizes>...</th>
-            <td mat-cell *matCellDef="let element">
-                <button [routerLink]="element.id" mat-mini-fab color="accent">
+            <th mat-header-cell *matHeaderCellDef> ... </th>
+            <td mat-cell *matCellDef="let element"
+                style="display: flex; justify-content: space-around; align-items: center;">
+                <button [routerLink]="element.id" mat-mini-fab color="accent" style="margin: 0 5px;">
                     <mat-icon>visibility</mat-icon>
                 </button>
-                <!-- <button (click)="openDialog(element)" mat-mini-fab color="primary">
+                <button (click)="openDialog(element)" mat-mini-fab color="primary" style="margin: 0 5px;">
                     <mat-icon>edit</mat-icon>
-                </button> -->
+                </button>
             </td>
         </ng-container>
 
