--- a/Segunda pre-entrega/proyectoAngular/src/app/layouts/dashboard/dashboard.component.html
+++ b/Segunda pre-entrega/proyectoAngular/src/app/layouts/dashboard/dashboard.component.html
@@ -7,6 +7,8 @@
                 mat-list-item>Clases</a>
             <a #alumnosLink="routerLinkActive" routerLinkActive [activated]="alumnosLink.isActive" routerLink="alumnos"
                 mat-list-item>Alumnos</a>
+            <a #inscripcionesLink="routerLinkActive" routerLinkActive [activated]="inscripcionesLink.isActive"
+                routerLink="inscripciones" mat-list-item>Inscripciones</a>
             <a (click)="logout()" mat-list-item>Cerrar sesion</a>
         </mat-nav-list>
     </mat-drawer>
