--- a/Segunda pre-entrega/proyectoAngular/src/app/layouts/dashboard/pages/clases/components/clases-dialog/clases-dialog.component.html
+++ b/Segunda pre-entrega/proyectoAngular/src/app/layouts/dashboard/pages/clases/components/clases-dialog/clases-dialog.component.html
@@ -23,10 +23,20 @@
                     <mat-hint>Campo obligatorio</mat-hint>
                 </mat-form-field>
             </div>
+            <div class="col-12">
+                <mat-form-field class="w-100 p-2" appearance="fill">
+                    <mat-label>Clase</mat-label>
+                    <mat-select formControlName="clases">
+                        <mat-option [value]="clase" *ngFor="let clase of clases">{{ clase.nombre }}</mat-option>
+                    </mat-select>
+                    <mat-hint>Campo obligatorio</mat-hint>
+                </mat-form-field>
+            </div>
         </div>
     </form>
+    <pre>{{clasesForm.value | json}}</pre>
 </div>
 <div class="d-flex justify-content-end" mat-dialog-actions>
     <button mat-dialog-close mat-button>Cancelar</button>
-    <button (click)="onSave()" mat-button>Guardar</button>
+    <button (click)="createInscrip()" mat-button>Guardar</button>
 </div>
