--- a/Proyecto-final/proyectoAngular/src/app/layouts/auth/auth.component.html
+++ b/Proyecto-final/proyectoAngular/src/app/layouts/auth/auth.component.html
@@ -1,16 +1,25 @@
 <main style="height: 100vh">
-    <div class="container mt-4">
-        <h2>Iniciar Sesión</h2>
-        <form>
-            <mat-form-field class="w-100">
-                <input matInput placeholder="Correo electrónico" type="email">
-            </mat-form-field>
-            <mat-form-field class="w-100">
-                <input matInput placeholder="Contraseña" type="password">
-            </mat-form-field>
-            <button (click)="login()" mat-flat-button color="accent">Iniciar Sesión</button>
-        </form>
+    <div class="example-sidenav-content">
+        <mat-toolbar color="accent">
+            <div class="d-flex justify-content-between align-items-center w-100">
+                <div>
+                    <span>Dance Academy</span>
+                </div>
+            </div>
+        </mat-toolbar>
     </div>
-
-
+    <div class="d-flex justify-content-center align-items-center h-100">
+        <div class="w-4">
+            <h2>Iniciar Sesión</h2>
+            <form [formGroup]="loginForm" (ngSubmit)="login()">
+                <mat-form-field class="w-100">
+                    <input formControlName="email" matInput placeholder="Correo electrónico" type="email">
+                </mat-form-field>
+                <mat-form-field class="w-100">
+                    <input formControlName="password" matInput placeholder="Contraseña" type="password">
+                </mat-form-field>
+                <button type="submit" mat-flat-button color="accent">Iniciar Sesión</button>
+            </form>
+        </div>
+    </div>
 </main>
