usuario en toolbar

--- a/Proyecto-final/proyectoAngular/src/app/layouts/dashboard/dashboard.component.html
+++ b/Proyecto-final/proyectoAngular/src/app/layouts/dashboard/dashboard.component.html
@@ -24,6 +24,10 @@
                     </button>
                     <span>Dance Academy</span>
                 </div>
+
+                @if (authUser$ | async; as user){
+                <div>{{ user?.firstName}}</div>
+                }
             </div>
 
         </mat-toolbar>
